--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,6 +14,13 @@
   "routes": [
     {
       "src": "/(.*)",
+      "dest": "/backend/build/$1"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/backend/build/index.html"
     }
   ]
