--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,15 +3,15 @@
   "installCommand": "npm install --legacy-peer-deps",
   "builds": [
     {
-      "src": "backend/server.js",
+      "src": "server.js",
       "use": "@vercel/node"
     },
     {
-      "src": "backend/build/**/*",
+      "src": "/build/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/backend/build/index.html" }
+    { "src": "/(.*)", "dest": "/build/index.html" }
   ]
 }
