--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,9 +12,6 @@
     }
   ],
   "routes": [
-    { 
-      "src": "/(.*)", 
-      "dest": "backend/build/index.html"
-    }
+    { "src": "/(.*)", "dest": "/build/index.html" }
   ]
 }
