--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,22 +3,22 @@
   "installCommand": "npm install --legacy-peer-deps",
   "builds": [
     {
-      "src": "backend/server.js",
+      "src": "server.js",
       "use": "@vercel/node"
     },
     {
-      "src": "backend/build/**/*",
+      "src": "build/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "backend/build/static/$1"
+      "dest": "build/static/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "backend/build/index.html"
+      "dest": "build/index.html"
     }
   ]
 }
