--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,6 +6,11 @@
       "src": "server.js",
       "use": "@vercel/node"
     },
+
+    {
+      "src": "src/**/*",
+      "use": "@vercel/static"
+    },
     {
       "src": "/build/**/*",
       "use": "@vercel/static"
