--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,22 +1,17 @@
 {
-  "version": 2,
   "installCommand": "npm install --legacy-peer-deps",
+  "version": 2,
   "builds": [
     {
       "src": "server.js",
       "use": "@vercel/node"
     },
-
     {
       "src": "src/**/*",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "/build/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/build/index.html" }
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
