--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,15 +3,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "/server.js",
       "use": "@vercel/node"
     },
     {
-      "src": "/**/*",
+      "src": "/build/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/build/$1"
+    }
   ]
 }
