--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/blob": "^0.24.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "mdbreact": "^5.2.0",
